--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "wiki/en"]
 	path = wiki/en
-	url = ssh://rezasa@gittools.se.axis.com:29418/e-bizz/csi-wiki
+	url = ssh://@gittools.se.axis.com:29418/e-bizz/csi-wiki
